--- a/data/se.sjoerd.DatMan.appdata.xml.in
+++ b/data/se.sjoerd.DatMan.appdata.xml.in
@@ -40,9 +40,17 @@ Graphs is an excellent fit both plotting and data manipulation. The plots create
     </screenshot>
   </screenshots>
   <releases>
-      <release version="1.3.1" date="2022-12-30">
+        <release version="1.3.2" date="2023-01-02">
       <description>
-        <p>Hot-fix update.</p>
+        <ul>
+          <li>Made all pop-up windows modal</li>
+          <li>Added the ability to change axes labels and the title of the plot by double clicking</li>
+        </ul>
+        </description>
+      </release>
+      <release version="1.3.1" date="2023-12-31">
+      <description>
+        <p>Brings some minor quality of life features.</p>
         <ul>
           <li>Ctrl+S now opens the Save Data dialog</li>
           <li>Fixed a bug where custom settings for tick positions no longer worked properly</li>
