--- a/data/se.sjoerd.DatMan.appdata.xml.in
+++ b/data/se.sjoerd.DatMan.appdata.xml.in
@@ -40,6 +40,16 @@ Graphs is an excellent fit both plotting and data manipulation. The plots create
     </screenshot>
   </screenshots>
   <releases>
+        <release version="1.3.3" date="2023-01-03">
+      <description>
+        <ul>
+          <li>Changed the color picker to a pop-over window</li>
+          <li>Data set no longer deselects when changing the color</li>
+          <li>When saving multiple files, files that already exists are saved with a (copy) suffix instead of overwriting the existing file</li>
+          <li>Minor code cleanup</li>
+        </ul>
+        </description>
+      </release>
         <release version="1.3.2" date="2023-01-02">
       <description>
         <ul>
@@ -48,7 +58,7 @@ Graphs is an excellent fit both plotting and data manipulation. The plots create
         </ul>
         </description>
       </release>
-      <release version="1.3.1" date="2022-12-31">
+      <release version="1.3.1" date="2023-12-31">
       <description>
         <p>Brings some minor quality of life features.</p>
         <ul>
