Changed default type for addequation props str

--- a/src/config.json
+++ b/src/config.json
@@ -46,7 +46,7 @@
 "plot_unselected_markers": "none",
 "plot_selected_markers": "none",
 "addequation_equation": "X",
-"addequation_X_start": 0,
-"addequation_X_stop": 10,
-"addequation_step_size": 0.01
+"addequation_X_start": "0",
+"addequation_X_stop": "10",
+"addequation_step_size": "0.01"
 }
