--- a/data/se.sjoerd.DatMan.appdata.xml.in
+++ b/data/se.sjoerd.DatMan.appdata.xml.in
@@ -40,6 +40,15 @@ Graphs is an excellent fit both plotting and data manipulation. The plots create
     </screenshot>
   </screenshots>
   <releases>
+        <release version="1.3.5" date="2023-01-11">
+      <description>
+        <p>Slightly bigger update than usual, with new features and some bug fixes. Next update will likely add the possibility to hide options from the main window.</p>      
+        <p>Bugfixes:</p>                       
+        <ul>
+          <li>Fixed a bug where the graph lines went on top of the legend in case of overlap</li>
+        </ul>
+        </description>
+      </release>        
         <release version="1.3.4" date="2023-01-05">
       <description>
         <p>Slightly bigger update than usual, with new features and some bug fixes. Next update will likely add the possibility to hide options from the main window.</p>      
@@ -221,4 +230,5 @@ Graphs is an excellent fit both plotting and data manipulation. The plots create
   </recommends>
   <content_rating type="oars-1.1" />
 </component>
+
 
