--- a/data/se.sjoerd.DatMan.appdata.xml.in
+++ b/data/se.sjoerd.DatMan.appdata.xml.in
@@ -42,10 +42,10 @@ Graphs is an excellent fit both plotting and data manipulation. The plots create
   <releases>
         <release version="1.3.5" date="2023-01-11">
       <description>
-        <p>Slightly bigger update than usual, with new features and some bug fixes. Next update will likely add the possibility to hide options from the main window.</p>      
         <p>Bugfixes:</p>                       
         <ul>
           <li>Fixed a bug where the graph lines went on top of the legend in case of overlap</li>
+          <li>Fixed a bug where the legend didn't get displayed for the picture-in-picture graph</li>          
         </ul>
         </description>
       </release>        
