--- a/data/se.sjoerd.DatMan.appdata.xml.in
+++ b/data/se.sjoerd.DatMan.appdata.xml.in
@@ -14,7 +14,7 @@
 Graphs is an excellent fit both plotting and data manipulation. The plots created with Graphs can be saved in a variety of formats suitable for sharing and presenting to a wide audience, such as in a scientific publication or presentations. It is also possible to save the plots as vector images, which can be easily edited in programs like Inkscape for further customization and refinement. Graphs is written with the GNOME environment in mind, but should be suitable for any other desktop environment as well.
           </p>
     <p>
-      Graphs is still in early development, and a large number of features are still planned. For any feature requests or feedback, please file an issue on the Github page.
+      For any feedback or general issues, please file an issue on the Github page.
     </p>
   </description>
   <launchable type="desktop-id">se.sjoerd.DatMan.desktop</launchable>
