rename config options

--- a/src/config.json
+++ b/src/config.json
@@ -12,7 +12,7 @@
 "plot_tick_top": false, 
 "plot_tick_bottom": true,
 "plot_tick_direction": "in",
-"handle_duplicates": "auto-rename",
+"handle_duplicates": "Auto-rename duplicates",
 "savefig_transparent": true, 
 "plot_legend": true,
 "plot_invert_color_cycle_dark": false, 
