--- a/data/se.sjoerd.DatMan.appdata.xml.in
+++ b/data/se.sjoerd.DatMan.appdata.xml.in
@@ -40,6 +40,25 @@ Graphs is an excellent fit both plotting and data manipulation. The plots create
     </screenshot>
   </screenshots>
   <releases>
+            <release version="1.4.0" date="2023-01-24">
+      <description>
+        <p>Major update with a UI overhaul</p>      
+        <p>New in Graphs:</p>               
+        <ul>
+          <li>The action grid on the left has been replaced by expander Rows, sorting the actions by category</li>
+          <li>Checkboxes in settings have been replaced by switches</li>
+          <li>Old entry rows have been replaced by AdwEntryRows</li>
+          <li>The save data button has been moved to the header bar</li>
+          <li>There's no longer an error shown when a new config file is loaded (such as on initial setup)</li>
+          <li>There's now multiple options to choose from on how to handle data with the same name</li>
+        </ul>
+        <p>Bugfixes:</p>                       
+        <ul>
+          <li>Fixed a bug where the last graph to be deleted was still shown</li>
+          <li>Fixed a bug where the text in the dropdown menu of plot-settings didn't update when changing the name of a data set</li>          
+        </ul>
+        </description>
+      </release>        
         <release version="1.3.5" date="2023-01-14">
       <description>
         <p>Minor update with some bugfixes, plus a new logo!</p>      
@@ -235,5 +254,3 @@ Graphs is an excellent fit both plotting and data manipulation. The plots create
   </recommends>
   <content_rating type="oars-1.1" />
 </component>
-
-
