--- a/data/se.sjoerd.DatMan.appdata.xml.in
+++ b/data/se.sjoerd.DatMan.appdata.xml.in
@@ -51,12 +51,12 @@ Graphs is an excellent fit both plotting and data manipulation. The plots create
           <li>The save data button has been moved to the header bar</li>
           <li>There's no longer an error shown when a new config file is loaded (such as on initial setup)</li>
           <li>There's now multiple options to choose from on how to handle data with the same name</li>
+          <li>The translation and multiplication transforms now also accept basic expressions (such as 1/2 instead of 0.5)</li>          
         </ul>
         <p>Bugfixes and other changes:</p>                       
         <ul>
-          <li>"Shift vertically" behaviour has been revamped, and now also works properly on linear scale as well</li>
-          <li>"Shift vertically" option now normalizes after shifting, ensuring the shift is similar for all datasets</li>     
-          <li>Fixed a bug where the graph was still shown after deletion, if it was the last graph that was open</li>
+          <li>"Shift vertically" option now works properly on linear scale as well</li>
+          <li>Fixed a bug where the last graph to be deleted was still shown</li>
           <li>Fixed a bug where the text in the dropdown menu of plot-settings didn't update when changing the name of a data set</li>    
           <li>Fourier transforms are now sorted so that the x-data is continiously increasing</li>      
           <li>Some code clean-up has been performed</li> 
