--- a/meson.build
+++ b/meson.build
@@ -4,10 +4,12 @@ project('datman',
   default_options: [ 'warning_level=2', 'werror=false', ],
 )
 
+application_id = 'se.sjoerd.DatMan'
+
 i18n = import('i18n')
 gnome = import('gnome')
 
-
+pkgdatadir = join_paths(get_option('prefix'), get_option('datadir'), meson.project_name())
 
 subdir('data')
 subdir('src')
