use GNOME icons for toolbar

--- a/meson.build
+++ b/meson.build
@@ -10,6 +10,7 @@ i18n = import('i18n')
 gnome = import('gnome')
 
 pkgdatadir = join_paths(get_option('prefix'), get_option('datadir'), meson.project_name())
+moduledir = join_paths(pkgdatadir, 'datman')
 
 subdir('data')
 subdir('src')
