use document-save instead of floppy in toolbar

--- a/data/meson.build
+++ b/data/meson.build
@@ -63,7 +63,7 @@ icon_sources = [
   join_paths('icons', 'arrow1-right-symbolic.svg'),
   join_paths('icons', 'change-xscale-symbolic.svg'),
   join_paths('icons', 'change-yscale-symbolic.svg'),
-  join_paths('icons', 'floppy-symbolic.svg'),
+  join_paths('icons', 'document-save-symbolic.svg'),
   join_paths('icons', 'go-home-symbolic.svg'),
   join_paths('icons', 'loupe-symbolic.svg'),
   join_paths('icons', 'move-tool-symbolic.svg'),
@@ -73,7 +73,7 @@ icon_sources = [
   join_paths('icons', 'arrow1-right-dark-symbolic.svg'),
   join_paths('icons', 'change-xscale-dark-symbolic.svg'),
   join_paths('icons', 'change-yscale-dark-symbolic.svg'),
-  join_paths('icons', 'floppy-dark-symbolic.svg'),
+  join_paths('icons', 'document-save-dark-symbolic.svg'),
   join_paths('icons', 'go-home-dark-symbolic.svg'),
   join_paths('icons', 'loupe-dark-symbolic.svg'),
   join_paths('icons', 'move-tool-dark-symbolic.svg'),
