--- a/data/meson.build
+++ b/data/meson.build
@@ -49,13 +49,13 @@ resources = gnome.compile_resources(
 scalable_dir = join_paths('icons', 'hicolor', 'scalable', 'apps')
 install_data(
   join_paths(scalable_dir, ('@0@.svg').format(application_id)),
-  install_dir: join_paths(get_option('datadir'), 'icons', scalable_dir)
+  install_dir: join_paths(get_option('datadir'), scalable_dir)
 )
 
 symbolic_dir = join_paths('icons', 'hicolor', 'symbolic', 'apps')
 install_data(
   join_paths(symbolic_dir, ('@0@-symbolic.svg').format(application_id)),
-  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
+  install_dir: join_paths(get_option('datadir'), symbolic_dir)
 )
 
 install_data('config.json', install_dir: moduledir, install_mode: 'rwxrwxrwx')
