declare datadir to avoid repeated lookup

--- a/data/meson.build
+++ b/data/meson.build
@@ -4,7 +4,7 @@ desktop_file = i18n.merge_file(
          type: 'desktop',
        po_dir: '../po',
       install: true,
-  install_dir: join_paths(get_option('datadir'), 'applications')
+  install_dir: join_paths(datadir, 'applications')
 )
 
 desktop_utils = find_program('desktop-file-validate', required: false)
@@ -17,7 +17,7 @@ appstream_file = i18n.merge_file(
        output: application_id + '.appdata.xml',
        po_dir: '../po',
       install: true,
-  install_dir: join_paths(get_option('datadir'), 'appdata')
+  install_dir: join_paths(datadir, 'appdata')
 )
 
 appstream_util = find_program('appstream-util', required: false)
@@ -26,7 +26,7 @@ if appstream_util.found()
 endif
 
 install_data(application_id + '.gschema.xml',
-  install_dir: join_paths(get_option('datadir'), 'glib-2.0/schemas'),
+  install_dir: join_paths(datadir, 'glib-2.0/schemas'),
     install_mode: 'rwxrwxrwx'
 )
 
@@ -49,13 +49,13 @@ resources = gnome.compile_resources(
 scalable_dir = join_paths('icons', 'hicolor', 'scalable', 'apps')
 install_data(
   join_paths(scalable_dir, ('@0@.svg').format(application_id)),
-  install_dir: join_paths(get_option('datadir'), scalable_dir)
+  install_dir: join_paths(datadir, scalable_dir)
 )
 
 symbolic_dir = join_paths('icons', 'hicolor', 'symbolic', 'apps')
 install_data(
   join_paths(symbolic_dir, ('@0@-symbolic.svg').format(application_id)),
-  install_dir: join_paths(get_option('datadir'), symbolic_dir)
+  install_dir: join_paths(datadir, symbolic_dir)
 )
 
 install_data('config.json', install_dir: moduledir, install_mode: 'rwxrwxrwx')
