--- a/meson.build
+++ b/meson.build
@@ -9,7 +9,8 @@ application_id = 'se.sjoerd.DatMan'
 i18n = import('i18n')
 gnome = import('gnome')
 
-pkgdatadir = join_paths(get_option('prefix'), get_option('datadir'), meson.project_name())
+datadir = get_option('datadir')
+pkgdatadir = join_paths(get_option('prefix'), datadir, meson.project_name())
 moduledir = join_paths(pkgdatadir, 'datman')
 
 subdir('data')
