--- a/data/se.sjoerd.Graphs.appdata.xml.in
+++ b/data/se.sjoerd.Graphs.appdata.xml.in
@@ -1,6 +1,6 @@
 <?xml version='1.0' encoding='utf-8'?>
 <component type="desktop-application">
-  <id>se.sjoerd.DatMan</id>
+  <id>se.sjoerd.Graphs</id>
   <metadata_license>CC0-1.0</metadata_license>
   <project_license>GPL-3.0-or-later</project_license>
   <name>Graphs</name>
@@ -17,7 +17,7 @@ Graphs is an excellent fit both plotting and data manipulation. The plots create
       For any feedback or general issues, please file an issue on the Github page.
     </p>
   </description>
-  <launchable type="desktop-id">se.sjoerd.DatMan.desktop</launchable>
+  <launchable type="desktop-id">se.sjoerd.Graphs.desktop</launchable>
   <url type="bugtracker">https://github.com/SjoerdB93/Graphs/issues</url>
   <url type="help">https://github.com/SjoerdB93/Graphs/</url>
   <url type="homepage">https://www.sjoerd.se/Graphs</url>
