--- a/src/graphs.in
+++ b/src/graphs.in
@@ -1,8 +1,8 @@
 #!@PYTHON@
 
-# graphs.in
+# Graphs
 #
-# Copyright 2022 Sjoerd Broekhuijsen
+# Copyright 2022 - 2023 Sjoerd Broekhuijsen
 #
 # This program is free software: you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
