Add description to graphs.in

--- a/src/graphs.in
+++ b/src/graphs.in
@@ -1,6 +1,10 @@
 #!@PYTHON@
 
 # Graphs
+# Plot and manipulate data in a breeze
+#
+# https://www.sjoerd.se/Graphs
+# https://github.com/SjoerdB93/Graphs
 #
 # Copyright 2022 - 2023 Sjoerd Broekhuijsen
 #
