update appdata changelist

--- a/data/se.sjoerd.Graphs.appdata.xml.in
+++ b/data/se.sjoerd.Graphs.appdata.xml.in
@@ -45,6 +45,7 @@ Graphs is an excellent fit both plotting and data manipulation. The plots create
       <description>
         <p>Minor update with updated AppID.</p>
         <ul>
+          <li>The sidebar is now retractable</li>
           <li>Graphs now uses symbolic GNOME icons in the toolbar wherever possible</li>
           <li>Some code clean-up has been performed</li>          
           <li>The new app-id for Graphs is now se.sjoerd.Graphs</li>
