--- a/data/se.sjoerd.Graphs.appdata.xml.in
+++ b/data/se.sjoerd.Graphs.appdata.xml.in
@@ -47,6 +47,7 @@ Graphs is an excellent fit both plotting and data manipulation. The plots create
         <ul>
           <li>The sidebar is now retractable</li>
           <li>Graphs now uses symbolic GNOME icons in the toolbar wherever possible</li>
+          <li>The legend is now accomponied with a frame for all styles in order to improve readability</li>          
           <li>Some code clean-up has been performed</li>          
           <li>The new app-id for Graphs is now se.sjoerd.Graphs</li>
         </ul>
