add toolbar.py back in meson build file

--- a/src/meson.build
+++ b/src/meson.build
@@ -29,6 +29,7 @@ graphs_sources = [
   'preferences.py',
   'rename_label.py',
   'samplerow.py',
+  'toolbar.py',
   'transform_data.py',
   'utilities.py',
   'window.py',
