add custom stylesheets
Signed-off-by: Christoph Matthias Kohnen <christoph.kohnen@disroot.org>

--- a/data/config.json
+++ b/data/config.json
@@ -4,8 +4,8 @@
 "plot_unselected_marker_size": 8.0,
 "selected_linewidth": 3.0, 
 "unselected_linewidth": 1.0,
-"plot_major_tick_width": 1.0, 
-"plot_minor_tick_width": 0.5, 
+"plot_major_tick_width": 0.8,
+"plot_minor_tick_width": 0.6,
 "plot_major_tick_length": 8.0, 
 "plot_minor_tick_length": 3.0, 
 "plot_tick_left": true, 
@@ -38,8 +38,8 @@
 "action_center_data": "Center at middle coordinate", 
 "plot_selected_linestyle": "solid",
 "plot_unselected_linestyle": "solid", 
-"plot_style_dark": "dark_background",
-"plot_style_light": "seaborn-v0_8-whitegrid",
+"plot_style_dark": "adwaita-dark",
+"plot_style_light": "adwaita",
 "import_column_x": 0,
 "import_column_y": 1, 
 "import_skip_rows": 0, 
