--- a/src/graphs.in
+++ b/src/graphs.in
@@ -42,9 +42,13 @@ gettext.install('graphs', localedir)
 if __name__ == '__main__':
     import gi
 
+    gi.require_version('Adw', '1')
+    gi.require_version('Gtk', '4.0')
+
     from gi.repository import Gio
     resource = Gio.Resource.load(os.path.join(pkgdatadir, 'se.sjoerd.Graphs.gresource'))
     resource._register()
 
     from graphs import main
     sys.exit(main.main(VERSION))
+
