--- a/po/meson.build
+++ b/po/meson.build
@@ -1,1 +1,7 @@
-i18n.gettext('datman', preset: 'glib')
+# SPDX-License-Identifier: GPL-3.0-or-later
+i18n.gettext(
+	'graphs',
+	install_dir: localedir,
+	preset: 'glib',
+	args: '--from-code=UTF-8'
+)
