--- a/po/meson.build
+++ b/po/meson.build
@@ -1,7 +1,9 @@
 # SPDX-License-Identifier: GPL-3.0-or-later
+languages = fs.read('LINGUAS').strip().split('\n')
 i18n.gettext(
 	'graphs',
 	install_dir: localedir,
 	preset: 'glib',
-	args: '--from-code=UTF-8'
+	args: '--from-code=UTF-8',
+	languages: languages
 )
