move canvas to own file
Signed-off-by: Christoph Matthias Kohnen <christoph.kohnen@disroot.org>

--- a/src/meson.build
+++ b/src/meson.build
@@ -19,6 +19,7 @@ configure_file(
 graphs_sources = [
   'add_data_advanced.py',
   'add_equation.py',
+  'canvas.py',
   'colorpicker.py',
   'data.py',
   'graphs.py',
