move file-related stuff to file_io.py
Signed-off-by: Christoph Matthias Kohnen <christoph.kohnen@disroot.org>

--- a/src/meson.build
+++ b/src/meson.build
@@ -22,6 +22,7 @@ graphs_sources = [
   'canvas.py',
   'colorpicker.py',
   'data.py',
+  'file_io.py',
   'graphs.py',
   'item_operations.py',
   'main.py',
