--- a/src/meson.build
+++ b/src/meson.build
@@ -1,15 +1,7 @@
 # SPDX-License-Identifier: GPL-3.0-or-later
-python = import('python')
-
-conf = configuration_data()
-conf.set('PYTHON', python.find_installation('python3').path())
-conf.set('VERSION', meson.project_version())
-conf.set('localedir', localedir)
-conf.set('pkgdatadir', pkgdatadir)
-
 configure_file(
   input: 'graphs.in',
-  output: 'graphs',
+  output: meson.project_name(),
   configuration: conf,
   install: true,
   install_mode: 'rwxr-xr-x',
